# Fit_Control

./: .gitignore  COMANDOS_PR.md  FACILIDAD_DE_USO.md  GUIA_EJECUCION.md  GUIA_INICIO_RAPIDO.md  GymAnalyzer-Launcher.desktop  MEJORAS_IMPLEMENTADAS.md  PR_READY.md  PR_TEMPLATE.md  README.md  README_WINDOWS.md  RESUMEN_MEJORAS_FACILIDAD.md  SOLUCION_DEPENDENCIAS.md  SOLUCION_DEPENDENCIAS_MODERNA.md  SOLUCION_WINDOWS_11.md  check_mobile.js  config.yaml  create_pr_commands.sh  database.db  demo_facilidad.sh  environment.yml  fix_dependencies.bat  fix_emergencia.py  launcher.py  launcher_windows.bat  launcher_windows.py  pyproject.toml  requirements.txt  run_app.sh  run_desktop.py  run_django_api.sh  run_gui_app.bat  run_gui_app.sh  run_gym_analyzer.ps1  run_launcher.sh  run_mobile.sh  run_mobile_app.sh  run_streamlit_app.bat  run_streamlit_app.sh  setup_easy_launcher.sh  (+8 more)
MobileApp/: App.tsx  README.md  index.js  package-lock.json  package.json  setup-windows.bat  start-dev.bat  tsconfig.json
MobileApp/android/: build.gradle  gradle.properties  settings.gradle
backend/: models.py  serializers.py  urls.py  views.py
data/: gym_progress.db
frontend/: index.html
mobile-app/: .gitignore  App.js  package.json
notebooks/: inspect_real_angles.ipynb
scripts/: setup_modern.py
src/: app.py  config.py  constants.py  database.py  database_extensions.py  enhanced_app.py  pipeline.py  run_pipeline.py
src/1-preprocessing/: 2-frame_extraction.py
src/2-pose_estimation/: pose_utils.py
src/3-sensor_preprocessing/: sensor_utils.py
src/A_preprocessing/: __init__.py  build_master_csv.py  file_extensions.py  frame_extraction.py  frame_extraction_gui.py  image_preprocessing.py  video_metadata.py  video_utils.py
src/B_pose_estimation/: estimators.py  metrics.py  pose_utils.py  processing.py
src/D_modeling/: analysis_3d.py  count_reps.py  exercise_analyzer.py  math_utils.py
src/F_visualization/: drawing_utils.py  video_renderer.py
src/gui/: app_launcher.py  gui_utils.py  main.py  main_window.py  simple_launcher.py  style_utils.py  worker.py
src/i18n/: es.json  translator.py
src/services/: plan_generator.py
tests/: test_video_utils.py
themes/: dark.qss  enhanced_dark.qss  light.qss
workout_api/: .env.example  db.sqlite3  manage.py  requirements.txt
workout_api/analysis/: admin.py  exercise_analyzer.py  models.py  (+3 more)
(+57 files in other folders)
